kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: l12u
  labels:
    istio-injection: enabled
