kubernetes/gamemaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamemaster
  template:
    metadata:
      labels:
        app: gamemaster
    spec:
      containers:
      - name: gamemaster
        image: ghcr.io/l12u/gamemaster:0.3.1
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /etc/gamemaster
          name: boardconfig
      volumes:
      - name: boardconfig
        configMap:
          name: gamemaster-boardconfig
---
apiVersion: v1
kind: Service
metadata:
  name: gamemaster
spec:
  selector:
    app: gamemaster
  ports:
  - name: gamemaster
    port: 8080
